# web_api_with_cpp

./: README.md
web_api_with_cpp/calculator_back-end/: CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  main.cpp
web_api_with_cpp/calculator_back-end/include/: CalcResourceFactory.h  CalcService.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h
web_api_with_cpp/calculator_front-end/: package-lock.json  package.json
web_api_with_cpp/calculator_front-end/src/: App.js  Calculator.js  CalculatorApi.js  CalculatorButton.js  CalculatorDisplay.js  CalculatorPanel.js
